<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/photo_2023_05_16_11_50_47" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/nameText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="#0070AE"
                    android:text="@string/name"
                    android:textColor="@color/white" />

                <EditText
                    android:id="@+id/nameInp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="text"
                    android:hint="@string/nameHint" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/numberText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="#0070AE"
                    android:text="@string/number"
                    android:textColor="@color/white" />

                <EditText
                    android:id="@+id/numberInp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="phone"
                    android:hint="@string/numberHint"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/paxText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="#0070AE"
                    android:text="@string/groupSize"
                    android:textColor="@color/white" />

                <EditText
                    android:id="@+id/paxInp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="number"
                    android:hint="@string/groupSizeHint"/>

            </LinearLayout>

            <TextView
                android:id="@+id/dateHeading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#0070AE"
                android:text="DATE OF RESERVATION: "
                android:textColor="@color/white" />

            <DatePicker
                android:id="@+id/datePicker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:headerBackground="#0070AE" />

            <TextView
                android:id="@+id/timeHeading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#0070AE"
                android:text="TIME OF RESERVATION:"
                android:textColor="@color/white" />

            <TimePicker
                android:id="@+id/timePicker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:timePickerMode="spinner" />

            <TextView
                android:id="@+id/seatType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#0070AE"
                android:text="SEAT TYPE:" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/smokingopt1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/smokeOpt1" />

                <RadioButton
                    android:id="@+id/smokingopt2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/smokeOpt2" />
            </LinearLayout>

            <Button
                android:id="@+id/confirm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#0070AE"
                android:text="@string/confirm"
                android:textColorLink="#0070AE"
                app:backgroundTint="#0070AE" />

            <Button
                android:id="@+id/cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="#0070AE"
                android:text="@string/cancel"
                app:backgroundTint="#0070AE" />

            <TextView
                android:id="@+id/tvDisplay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="" />

        </LinearLayout>
    </ScrollView>


</LinearLayout>